app/static/ostoskeskus.css
html {
    font-family: sans-serif;
    background: #ffffff;
    padding: 1rem;
}
body {
    max-width: 960px;
    margin: 0 auto;
    background: white;
}
h1 {
    color: #8696bf;
    margin: 1rem 0;
}
a {
    color: #ffffff;
}
hr {
    width: 50%;
    border: none;
    border-top: 1px solid #cccccc;
}
nav {
    background: #453cc7;
    display: flex;
    align-items: center;
    padding: 0 0.5rem;
    border-radius: 10px;
}
nav h1 {
    flex: auto;
    margin: 0;
}
nav h1 a {
    text-decoration: none;
    padding: 0.75rem 0.75rem;
}
nav ul  {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}
nav ul li a, nav ul li span, header .action {
    display: block;
    padding: 0.75rem;
}
header > h1 {
    margin-left: 20px;
}
.flash {
    margin: 1em 0;
    padding: 1em;
    background: #cae6f6;
    border: 1px solid #377ba8;
}
.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
    margin-top: 10px;
    margin-bottom: 10px;
}
.column {
    flex: 1 1 20%;
    margin: 10px;
    padding: 10px 10px 10px 10px;
    background-color: #453cc7;
    box-sizing: border-box;
    border-radius: 10px; 
    /* Need to think if I want to enable drop shadows across the app
    overflow: hidden;
    box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.5);
    */
}
.category {
    color: #ffffff;
    text-align: center;
    font-size: 1.5rem;
    font-weight: bold;
    min-height: 4rem;
}
.top-picks {
    color: #ffffff;
    text-align: center;
}
.name {
    font-weight: bold;
    font-size: 1rem;
    margin-bottom: 10px;
}
.description {
    font-size: 0.75rem;
    font-style: italic;
}
.price {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 1rem;
    text-align: center;
}
.quantity {
    font-size: 1rem;
    text-align: center;
}
.thanks {
    font-size: 1.5rem;
    text-align: center;
}
.seller {
    font-size: 1rem;
    text-align: center;
}
.buy {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 1.5rem;
    text-align: center;
}
.remove {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 1.5rem;
    text-align: center;
}
.auth-form, .admin-form {
    max-width: 500px;
    margin: 0 auto;
    padding: 20px;
    border: 0px;
}
.auth-form label, .admin-form label {
    display: block;
    margin-bottom: 5px;
}
.auth-form input, .admin-form input {
    width: 480px;
    padding: 10px;
    border: 1px solid #cccccc;
    border-radius: 5px;
    margin-bottom: 10px;
}
.auth-form input[type="submit"], .admin-form input[type="submit"] {
    width: 500px;
    background-color: #453cc7;
    color: #ffffff;
    cursor: pointer;
    margin-bottom: 0px;
    border-radius: 5px;
}
.search-form, .order-form {
    max-width: 500px;
    margin: 0 auto;
    padding: 20px;
    border: 0px;
    display: flex;
    justify-content: center;
    gap: 10px;
}
.search-form input {
    width: 200px;
    padding: 10px;
    border: 1px solid #cccccc;
    border-radius: 5px;
}
.search-form input[type="submit"] {
    width: 100px;
    background-color: #453cc7;
    color: #ffffff;
    cursor: pointer;
    border-radius: 5px;
}
.tab, .list_footer {
    display: flex;
    justify-content: center;
    gap: 20px;
    margin-bottom: 10px;
}
.tab > a, .list_footer > a {
    color: #000000;
}
.list_footer {
    margin-top: 20px;
    margin-bottom: 20px;
}
.grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    width: 960px;
    gap: 20px;
    margin: 0 auto;
}
.listing {
    border-radius: 10px;
    padding: 10px;
    box-sizing: border-box;
    color: #ffffff;
    background-color: #453cc7;
    font-size: 30px;
    text-align: center;
}
.image img {
    border-radius: 10px;
    width: 100%;
    height: auto;
}

